--- a/ImageGradient/ImageGradient.vcxproj.filters
+++ b/ImageGradient/ImageGradient.vcxproj.filters
@@ -24,12 +24,18 @@
     <ClInclude Include="targetver.h">
       <Filter>標頭檔</Filter>
     </ClInclude>
+    <ClInclude Include="ImageProcessing.h">
+      <Filter>標頭檔</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
       <Filter>原始程式檔</Filter>
     </ClCompile>
     <ClCompile Include="ImageGradient.cpp">
+      <Filter>原始程式檔</Filter>
+    </ClCompile>
+    <ClCompile Include="ImageProcessing.cpp">
       <Filter>原始程式檔</Filter>
     </ClCompile>
   </ItemGroup>
